@@ -1,3 +1,6 @@
+2021-11-28
+    * Czech translation, by Pavel Fric
+
 2021-11-25
     * Qt6 compatibility fixes
 
